Design tweaks/cleanup

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,17 +6,17 @@
 
 <section class="shirt-area">
   <svg class="shirt-image">
-    <use xlink:href="#shirt-icon"></use>
+    <use xlink:href="#shirt-thin"></use>
   </svg>
   <svg class="shirt-weed">
     <use xlink:href="#weed-icon"></use>
   </svg>
-  <figure style="background-image: url({{ imageFile }})" alt="BUTT NAKED TOKE GAME"/>
+  <figure style="background-image: url({{ imageFile }})"/>
 </section>
 
 <section class="the-mark-consists-of">
-  <button class="audio" id="play">Audio &#9658;</button>
   <p>{{ description }}</p>
+  <button class="audio" id="play">Audio &#9658;</button>
 </section>
 
 <section class="owner">
