--- a/src/style.css
+++ b/src/style.css
@@ -251,8 +251,7 @@ padding: 16% 26%;
 
 .audio {
   display: none; /* only show Play button if browser supports Speech Synthesis */
-  float: left;
-  margin: 0 15px 10px 0;
+  margin: 10px 15px 20px 0;
 }
 
 .card {
@@ -265,6 +264,9 @@ padding: 16% 26%;
 }
 
 footer {
+  font-size: 0.8em;
+  margin: auto;
+  max-width: 590px;
   text-align: center;
   padding: 20px;
 }
